Update platform and plugin verifier versions
Signed-off-by: hientn <hientnvp@gmail.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,13 +12,13 @@
 #twigPluginVersion = 193.5233.116
 platformType=PS
 #platformVersion = 2020.3.3
-platformVersion=2024.1
+platformVersion=2025.2
 platformDownloadSources=true
 pluginName_=Yii2 Support
 pluginVersion=0.12
 pluginSinceBuild=192
 #pluginVerifierIdeVersions = IU-2019.1.4, IU-2019.3.5, IU-2020.1.4, IU-2020.2.3
-pluginVerifierIdeVersions=IU-2020.2.3, IU-2020.3.3, IU-2021.1, IU-2021.2, IU-2022.3, PS-2023.3.2, PS-2023.1.4, PS-2024.1
+pluginVerifierIdeVersions=IU-2020.2.3, IU-2020.3.3, IU-2021.1, IU-2021.2, IU-2022.3, PS-2023.3.2, PS-2023.1.4, PS-2024.1, PS-2025.2
 #runIdePath = /home/gl/.local/share/JetBrains/Toolbox/apps/PhpStorm/ch-1/211.6693.78
 #ideVersion = LATEST-EAP-SNAPSHOT
 #phpPluginVersion = 203.5251.40
