--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
 name: Execute Plugin tests with Gradle
 
 on:
@@ -9,24 +6,88 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx1024m"
+
 jobs:
-  build:
-    name: Run Unit Tests
+  test:
+    name: Run Unit Tests (with retry on cache failure)
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v2
-    - name: Set up JDK
-      uses: actions/setup-java@v1
-      with:
-        java-version: 17
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Run Tests with Gradle
-      run: ./gradlew test
-    - name: Publish Test Report
-      uses: mikepenz/action-junit-report@v1
-      with:
-        report_paths: '**/build/test-results/test/TEST-*.xml'
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17 (Temurin)
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '17'
+          cache: 'gradle'
+
+      - name: Cache Gradle wrapper & caches
+        uses: actions/cache@v4
+        id: gradle-cache
+        with:
+          # cache gradle dependencies & wrapper to speed up builds
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper/
+            ~/.gradle/daemon/
+          key: gradle-cache-${{ runner.os }}-${{ hashFiles('**/gradle-wrapper.properties','**/*.gradle*','**/build.gradle*') }}
+          restore-keys: |
+            gradle-cache-${{ runner.os }}-
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Print Java & Gradle versions
+        run: |
+          java -version
+          ./gradlew -version
+
+      # First attempt: run tests normally. Allow failure so we can retry after clearing cache.
+      - name: Run Tests (first attempt)
+        id: first-attempt
+        run: ./gradlew clean test --no-daemon --stacktrace
+        continue-on-error: true
+
+      # If first attempt failed, clear potentially corrupted jar & caches and retry once
+      - name: Retry: Clear potential corrupted cache and rebuild (only if first failed)
+        if: ${{ failure() && steps.first-attempt.outcome == 'failure' }}
+        run: |
+          echo "First attempt failed — clearing possible corrupted Gradle cache and retrying..."
+          ./gradlew --stop || true
+          # remove problematic cached jars (example: jackson-core) and general caches; adjust as needed
+          rm -f ~/.gradle/caches/jars-*/**/jackson-core-2.*.jar || true
+          # full cache fallback (uncomment to be more aggressive)
+          # rm -rf ~/.gradle/caches/
+          ./gradlew clean test --refresh-dependencies --no-daemon --stacktrace
+
+      - name: Upload test results (JUnit XML)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: |
+            **/build/test-results/test/TEST-*.xml
+            **/build/test-results/**/*.xml
+
+      - name: Publish JUnit report to Actions (optional visual)
+        if: always()
+        uses: dorny/test-reporter@v1
+        with:
+          name: Unit tests
+          path: |
+            **/build/test-results/test/TEST-*.xml
+          reporter: junit
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Upload plugin zip if it's built (some projects produce artifacts even during tests)
+      - name: Upload plugin artifact (if exists)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: plugin-distributions
+          path: build/distributions/*.zip
